# company-aitrack

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRACT.md  CONTRIBUTING.md  CONTRIBUTOR_GUIDE.md  LICENSE  README.en.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SECURITY.md  TESTING.md  codecov.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
client/: Cargo.toml  README.md
client/src/: cli.rs  config.rs  crypto.rs  db.rs  git.rs  heartbeat.rs  init.rs  lib.rs  main.rs  update.rs  uploader.rs
client/src/adapter/: mod.rs
client/src/adapter/event/: claude.rs  codex.rs  cursor.rs
client/src/adapter/http/: mod.rs  upload.rs
client/src/adapter/sqlite/: keyword_store.rs  mod.rs  queries.rs  vec.rs
client/src/adapters/: claude.rs  codex.rs  cursor.rs  mod.rs
client/src/db/: keyword_store.rs  mod.rs  models.rs  queries.rs  schema.rs  vec.rs
client/src/domain/: crypto.rs  diff.rs  keywords.rs  mod.rs  model.rs
client/src/port/: storage.rs  upload.rs
client/src/testkit/: factories.rs  mod.rs
docker/: Dockerfile.client  Dockerfile.server-go  Dockerfile.server-java  README.md  docker-compose.e2e.yml  docker-compose.yml  maven-settings.xml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  PRIVACY.md  SECURITY_MODEL.md  TESTING.md
e2e/: Dockerfile.e2e  README.md  chain_integration_test.go  go.mod  go.sum  mock_chain_test.go  run-client-e2e.sh  run.sh
server-go/: README.md  go.mod  go.sum  main.go
server-java/: README.md  pom.xml
(+251 files in other folders)
