[package]
name = "aitrack"
version = "1.0.0"
edition = "2021"

[lib]
name = "aitrack"
path = "src/lib.rs"

[[bin]]
name = "aitrack"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
similar = "2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "5"
anyhow = "1"
thiserror = "1"
gethostname = "0.4"
ed25519-dalek = { version = "2", features = ["pkcs8", "pem", "rand_core"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio-test = "0.4"
rand = "0.8"
